# teldump

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md  cleanup-regex.txt  teldump.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-approve_dependabot.yml  browser_test.yml  cargo_bloat.yml  ci.yml  deny_warnings.yml
src/: main.rs
